--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <section class="wrapper">
         <div class="left">
             <div>
-               <img src="Sandhya2.JPG"/>
+               <img src="Sandhya2.JPG" width="500" height="600">
                 <p>Sandhya</p>
             </div>
             <div>
